# Kandidat-labbar

particlesystem-master/: CMakeLists.txt  README.md
particlesystem-master/ext/imgui/: imgui_impl_opengl3.cpp
particlesystem-master/include/: directional.hpp  emitter.h  force.h  gravityWell.hpp  particle.h  particlesystem.h  uniform.hpp  wind.hpp
particlesystem-master/include/util/: color.h  rendering.h  vec2.h
particlesystem-master/src/: directional.cpp  emitter.cpp  force.cpp  gravityWell.cpp  main.cpp  particle.cpp  particlesystem.cpp  uniform.cpp  wind.cpp
particlesystem-master/src/util/: rendering.cpp
particlesystem-master/unittest/: main.cpp  othertests.cpp  vec2.cpp
